bynkc/tests/fixtures/negative/292_http_cors_wildcard_credentials/src/api.bynk
context api

service api from http {
  cors {
    origins: ["*"],
    credentials: true,
  }

  on GET("/ping") by v: Visitor () -> Effect[HttpResult[String]] {
    Ok("pong")
  }
}
